Alteração no codigo html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="img">
         <img src="/img/pokemon-logo.png" alt="" />
       </div>
-      <form class="group-form">
+      <form class="group-for">
         <label>Nome ou número do Pokémon</label>
         <input type="text" id="name" placeholder="Exemplo: Pikachu ou 25" required>
         <input type="submit" value="Buscar">
