--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./PokemonDeck/style.css" />
     <title>PokeDeck</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
         consultas online
       </h1>
       <div class="img">
-        <img src="/img/pokemon-logo.png" alt="" />
+        <img src="../img/pokemon-logo.png" alt="" />
       </div>
       <form class="group-for">
         <label>Nome ou número do Pokémon</label>
