--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>
         trabalhando com <span>Html, css</span> e <span>javascript</span> para
-        consultas online
+        consultas onlin
       </h1>
       <div class="img">
         <img src="../img/pokemon-logo.png" alt="" />
