--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./PokemonDeck/style.css" />
+    <link rel="stylesheet" href="/PokemonDeck/style.css" />
     <title>PokeDeck</title>
   </head>
   <body>
     <div class="container">
       <h1>
-        trabalhando com <span>Html, css</span> e <span>javascript</span> para
+        Trabalhando com <span>Html, css</span> e <span>javascript</span> para
         consultas online
       </h1>
-      <div class="img">
-        <img src="../img/pokemon-logo.png" alt="" />
+      <hr>
+      <div class="imagem">
+        <img src="../img/Pokemon-logo.png" alt="" />
       </div>
-      <form class="group-for">
+      <form class="group-form">
         <label>Nome ou número do Pokémon</label>
         <input type="text" id="name" placeholder="Exemplo: Pikachu ou 25" required>
         <input type="submit" value="Buscar">
       </form>
+      <div id="imgPokemon" class="imagem">
+        <img src="/img/frente.png" alt="">
+        <img src="/img/costas.png" alt="">
+      </div>
+      <div id="content">
+        ...
+      </div>
     </div>
-    <hr />
   </body>
 </html>
