--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/PokemonDeck/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>PokeDeck</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
       </h1>
       <hr>
       <div class="imagem">
-        <img src="../img/Pokemon-logo.png" alt="" />
+        <img src="/img/Pokemon-logo.png" alt="" />
       </div>
       <form class="group-form">
         <label>Nome ou número do Pokémon</label>
