criado o arquivo e funções para consumir API - (erro no form pois nao mostra os dados da personagem)

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
       <div class="imagem">
         <img src="/img/Pokemon-logo.png" alt="" />
       </div>
-      <form class="group-form">
-        <label>Nome ou número do Pokémon</label>
-        <input type="text" id="name" placeholder="Exemplo: Pikachu ou 25" required>
-        <input type="submit" value="Buscar">
-      </form>
-      <div id="imgPokemon" class="imagem">
-        <img src="/img/frente.png" alt="">
-        <img src="/img/costas.png" alt="">
+      <form>
+        <div class="group-form">
+            <label>Nome ou Número do Pokémon:</label>
+            <input type="text" id="name" placeholder="Exemplo: Pikachu ou 25" required>
+        </div>
+        <div class="group-form">
+            <input type="submit" value="Pesquisar">
+        </div>
+    </form>
+       <div id="imgPokemon">
       </div>
-      <div id="content">
-        ...
-      </div>
-    </div>
+      <div id="content">...</div>
+  </div>
+    <script src="/script.js"></script>
   </body>
 </html>
